--- a/css/style.css
+++ b/css/style.css
@@ -35,14 +35,35 @@ li {
     margin-left: 30px;
 }
 
+li:after {
+    content: '';
+	display: block;
+	margin: auto;
+	height: 2px;
+	width: 0px;
+	background: transparent;
+	transition: width .5s ease, background-color .5s ease;
+}
+
+li:hover::after {
+    width: 100%;
+	background: white;
+}
+
 .header {
-    background-image: url(../images/desktop/image-hero.jpg);
-    background-repeat: no-repeat;
-    background-size:cover;
+    background-image: 
+    linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), 
+    url(../images/desktop/image-hero.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .container {
     padding: 2rem 8rem;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 .navbar {
@@ -53,7 +74,7 @@ li {
 .header-text {
     border: 1px solid #fff;
     margin: 6rem 0;
-    padding: 20px;
+    padding: 40px;
     max-width: 600px;
 }
 
@@ -78,12 +99,22 @@ li {
 .showcase-text h1{
     color: black;
     font-size: 48px;
+    /* font-weight: bold; */
     margin: 20px 0;
 }
 
 .showcase-text p{
     line-height: 1.4;
     font-size: 16px;
+    /* font-weight: bold; */
+}
+
+.bottom-section {
+    margin-bottom: 6rem;
+}
+
+.creations {
+    margin: 50px 0 80px 0;
 }
 
 .creations h1 {
@@ -91,11 +122,56 @@ li {
     font-size: 48px;
 }
 
-.creations a {
+.btn {
     background-color: var(--white);
     color: var(--black);
     border: 1px solid black;
-    padding: 10px 30px;
+    padding: 14px 35px 12px 40px;
+    font-weight: bold;
+    letter-spacing: 5px;
+    transition: 0.3s ease;
+}
+
+.btn:hover {
+    background-color: black;
+    color: white;
+}
+
+.grid-content {
+    position: relative;
+    color: #fff;
+}
+
+.grid-content img {
+    filter: brightness(75%);
+    width: 100%;
+}
+
+.grid-content img:hover {
+    opacity: 0.5;
+    transition: 0.3s ease;
+}
+
+.grid-content .content-text {
+    position: absolute;
+    bottom: 40px;
+    width: 80%;
+    font-size: 2rem;
+    padding-left: 40px;
+}
+
+.grid-content:hover {
+    cursor: pointer;
+    color: black;
+    transition: 0.3 ease;
+}
+
+.grid-content .content-text:hover {
+    color: #fff;
+}
+
+.grid-4 > *:nth-child(4) .content-text {
+    width: 50%;
 }
 
 .flex {
@@ -104,18 +180,60 @@ li {
     align-items: center;
 }
 
+
 .grid {
     display: grid;
     grid-template-columns: 50% 50%;
     margin: auto;
-    max-width: 1440px;
+}
+
+.grid-4 {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+}
+
+footer {
+    background-color: var(--black);
+}
+
+footer .container {
+    padding-bottom: 20px;
+}
+
+.socials a {
+    margin: auto;
+}
+
+.footer {
+    margin: 30px 0;
+}
+
+.footer ul {
+    list-style: none;
+}
+
+.footer li {
+    margin-left: 0;
+    margin-right: 30px;
+}
+
+.socials li {
+    margin-right: 0;
+    margin-left: 20px;
+}
+
+.footer p {
+    color: var(--vdark-gray);
+    font-weight: bold;
 }
 
 .attribution {
+    color: white;
     font-size: 11px;
     text-align: center;
 }
 
 .attribution a {
-    color: hsl(228, 45%, 44%);
+    color:blue;
+    text-decoration: underline;
 }
